fix(final/backend): fix MovieDTO to Movie mapping that causes issues when modifying categories